--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Generator</title>
+    <link rel="icon" type="image/jpg" href="https://i.postimg.cc/cLjMGS6b/1749303512176.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
